k8s/academic-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: academicservice
  namespace: exam-p2-integration
spec:
  replicas: 1
  selector:
    matchLabels:
      app: academicservice
  template:
    metadata:
      labels:
        app: academicservice
    spec:
      containers:
      - name: academicservice
        image: exam-academicservice:0.1
        ports:
        - containerPort: 8004
---
apiVersion: v1
kind: Service
metadata:
  name: academicservice
  namespace: exam-p2-integration
spec:
  ports:
  - port: 8004
    name: http
  selector:
    app: academicservice
