k8s/istio-gateway.yaml
# k8s/istio-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: exam-gateway
  namespace: exam-p2-integration
spec:
  selector:
    istio: ingressgateway     # use the built-in ingress
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
